add slideshow for sketches of charette

--- a/index.html
+++ b/index.html
@@ -1184,6 +1184,11 @@
           </figure> -->
     
           <figure class="mbc_container">
+
+            <button>Download PDF</button>
+
+            <br/>
+
             <h3>Idea and Introduction</h3>
             <p>
               The availability of public bathrooms for tourists and locals is not always obvious in major cities like Chicago. The
@@ -1192,6 +1197,8 @@
               extensive list of public restrooms in any city. The PeezyFind mobile and smart watch application will include maps and
               augmented reality to aid the user in finding the most efficient way to the nearest public restroom.
             </p>
+
+            <br/>
 
             <h3>
               Sketches during Charette
@@ -1208,6 +1215,9 @@
               log in feature (illustrated in Figure 1.2). There is a bigger convenience to the user not needing to log in to search
               public restrooms in their area, so Figure 3.0 focuses on that user situation.
             </p>
+
+            <br/>
+            <h4>Concept sketches:</h4>
 
             <div class="slideshow-container">
               <!--slides with caption-->
@@ -1255,6 +1265,15 @@
               <span class="dot" onclick="currentSlide(4)"></span>
               <span class="dot" onclick="currentSlide(5)"></span>
             </div>
+
+            <br/>
+
+            <h3>Personas</h3>
+            <h4>Scenarios</h4>
+            <h3>Competitive Analysis</h3>
+            <h4>Takeaways & Suggestions for PeezyFind post-analysis:</h4>
+            <h3>Mood Board</h3>
+            <h4>Calm and Convenient: The PeezyFind Mood-board</h4>
 
           </figure>
     
