move some assets

--- a/index.html
+++ b/index.html
@@ -1040,14 +1040,49 @@
 
             </p>
             <h5>Visiting/ Newcomers</h5>
+            <p>
+              Resources and information for visiting tourists who want to sight- see as well as needed sources for new faces who want
+              to move to the area and adjust to a new life there.
+            </p>
             <h5>Business</h5>
+            <p>
+              Mining and metallurgy are the driving economic industries of the area, but many smaller businesses can thrive too. Here
+              are the resources and information needed for such ventures. There are resources for contractors who want to work with
+              local businesses too.
+            </p>
             <h5>Transportation</h5>
+            <p>
+              Different methods of getting to the area via provincial highways, local highways or the Rouyn airport. The Rouyn airport
+              is also useful for commercial travel. Information on public transport is also listed.
+
+            </p>
             <h5>Life in Rouyn-Noranda</h5>
+            <p>
+              What is it like to live in this town as a student? What about a full-time worker with a family? There are also several
+              events held in town at various points of the year to get more involved and different municipal organizations to get
+              involved within the local political scene.
+            </p>
 
             <h4>Personas</h4>
+            <h5>Persona 1</h5>
+            <p>Ron. The new graduate who wants to start life in a small town.</p>
+            <h5>Persona 2</h5>
+            <p>Janine. The tourist who wants to get to know rural Canada.</p>
 
             <h4>Scenarios</h4>
-            
+            <h5>Scnario 1</h5>
+            <p>
+              You found a town to have a new start in.
+            </p>
+            <h5>Scenario 2</h5>
+            <p>
+              You are visiting rural Canada for the first time.
+            </p>
+            <h5>Scenario 3</h5>
+            <p>
+              You are looking for work in Rouyn-Noranda.
+            </p>
+
             <h3>Testing Process</h3>
             <h4>Content Inventory</h4>
             <h5>Purpose</h5>
