add some more content to rouyn modal and fix some styling issues with long modals

--- a/index.html
+++ b/index.html
@@ -1085,22 +1085,42 @@
 
             <h3>Testing Process</h3>
             <h4>Content Inventory</h4>
+            <p>Our group proceeded to lay out the website's information architecture into a content inventory, using each component of
+            the main navigation, there was a total of 113 content items.</p>
             <h5>Purpose</h5>
+            <p>The inventory would help the group understand the main components of the website and evaluate a more efficient
+            organizational scheme for the user.</p>
             <h5>What we learned</h5>
+            <p>There were too many links in the website's main navigation. Certain pages contained links that lead to other parts of
+            the navigation. The existing category names were unclear at what information they presented based on the user scenario
+            possibilities. Localization added to the ambiguity of the naming conventions of the navigation.</p>
+            
+            <br/>
 
             <h4>Card Sorts</h4>
+            <p>From the initial content inventory, areas of opportunity to reorganize were found. Three card sorts were conducted: Open
+            card sort, closed card sort, and another closed card sort for validation purposes. Our group used OptimalSort to conduct
+            the card sort testings. Participants were recruited by family, friends and social media connections. The following
+            sections are the results and changes.</p>
             <h5>Round 1: Open</h5>
+            <p>There were 2 parcipants for the first card sort as a pilot card sort, with 3 iterations per participant. This was an
+            open card sort.</p>
             <h6>Results</h6>
             <h5>Round2: Closed</h5>
+            <p>There were 6 participants for the second card sort. This was a closed card sort.</p>
             <h6>Results</h6>
             <h6>Needs Changes?</h6>
             <h5>Round 3: Closed, validation</h5>
+            <p>This closec card sort serves to validate the result of the second round of card sorts.</p>
             <h6>Results</h6>
 
             <h4>Task Based Tests</h4>
             <h5>Treejack Test</h5>
             <h6>Tasks</h6>
-
+            <p>You are visiting rural Canada for the first time. You're looking for something to do. Where would you look for that
+            information?</p>
+            <p>You want to move to a small town, but it's a big step? Where could you find information to start the moving process?</p>
+            <p>You settled in to Rouyn-Noranda, but you need to find work to pay the bills. Where would you find that information?</p>
           </figure>
       
         </div>
