add cv content and emails

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </p>
           <p class="about-txt" id="about-email">
             <button class="modal-btn" href="#myModal-e">
-              my@email.com
+              vilinh27@gmail.com
             </button>
           </p>
         </div>
@@ -255,7 +255,7 @@
     <div class="tabcontent" id="cv-grid">
       <div class="cv-container">
         <div class="cv-header">
-          <p>my@email.com | portfolio.com | linkedinprofile</p>
+          <p>vilinh27@gmail.com | portfolio.com | linkedinprofile</p>
         </div>
         <div class="cv-education">
           <h3>Education</h3>
@@ -386,13 +386,17 @@
                 <th>Backend Development:</th>
                 <td>
                   <div class="cv-s_tableInfo">
-                    <div>Language</div>
+                    <div>Node.js</div>
                     <div> | </div>
-                    <div>Language</div>
+                    <div>Swift</div>
                     <div> | </div>
-                    <div>Language</div>
+                    <div>Java</div>
                     <div> | </div>
-                    <div>Language</div>
+                    <div>SQL</div>
+                    <div> | </div>
+                    <div>C#</div>
+                    <div> | </div>
+                    <div>Python</div>
                   </div>
                 </td>
               </tr>
@@ -400,13 +404,15 @@
                 <th>Design:</th>
                 <td>
                   <div class="cv-s_tableInfo">
-                    <div>Program</div>
+                    <div>Adobe Illustrator</div>
                     <div> | </div>
-                    <div>Program</div>
+                    <div>Adobe Photoshop</div>
                     <div> | </div>
-                    <div>Program</div>
+                    <div>Adobe Flash</div>
                     <div> | </div>
-                    <div>Program</div>
+                    <div>Figma</div>
+                    <div> | </div>
+                    <div>Axure</div>
                   </div>
                 </td>
               </tr>
@@ -414,13 +420,15 @@
                 <th>Miscellaneous:</th>
                 <td>
                   <div class="cv-s_tableInfo">
-                    <div>Skill</div>
+                    <div>Git</div>
                     <div> | </div>
-                    <div>Skill</div>
+                    <div>French Fluency</div>
                     <div> | </div>
-                    <div>Skill</div>
+                    <div>Vietnamese Fluency</div>
                     <div> | </div>
-                    <div>Skill</div>
+                    <div>Microsoft Word</div>
+                    <div> | </div>
+                    <div>Microsoft Powerpoint</div>
                   </div>
                 </td>
               </tr>
@@ -431,26 +439,27 @@
           <h3>Coursework</h3>
           <hr />
           <div class="cv-c_container">
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div> |
-            <div class="cv-c_course">course name</div>
+            <div class="cv-c_course">Data Structures I & II</div> |
+            <div class="cv-c_course">Applied Algorithms</div> |
+            <div class="cv-c_course">Discrete Math</div> |
+            <div class="cv-c_course">Systems I & II</div> |
+            <div class="cv-c_course">Android Development I </div> |
+            <div class="cv-c_course">IOS Development I </div> |
+            <div class="cv-c_course">User Centered Design</div> |
+            <div class="cv-c_course">Prototyping and Implementation</div> |
+            <div class="cv-c_course">Information Architecture</div>
+            <div class="cv-c_course">Automata Theory</div>
           </div>
         </div>
         <div class="cv-interests">
           <h3>Interests</h3>
           <hr />
           <div class="cv-i_container">
-            <div class="cv-i_interest">interest</div> |
-            <div class="cv-i_interest">interest</div> |
-            <div class="cv-i_interest">interest</div> |
-            <div class="cv-i_interest">interest</div> |
-            <div class="cv-i_interest">interest</div> |
+            <div class="cv-i_interest">Web Development</div> |
+            <div class="cv-i_interest">Mobile Application Development</div> |
+            <div class="cv-i_interest">UX</div> |
+            <div class="cv-i_interest">Illustration</div> |
+            <div class="cv-i_interest">Design</div> |
           </div>
         </div>
       </div>
@@ -1755,7 +1764,7 @@
       <div class="f_contact">
         <p class="f_title">Contact Me</p>
         <p class="f_desc">
-          <button class="modal-btn" href="#myModal-e">my@email.com
+          <button class="modal-btn" href="#myModal-e">vilinh27@gmail.com
           </button>
         </p>
       </div>
