add text to ella collab modal

--- a/index.html
+++ b/index.html
@@ -223,6 +223,18 @@
         </div>
       </div>
       <!--end of project item 4-->
+
+      <!--ella collab-->
+      <div class="pcontainer">
+        <div class="card" id="project15">
+          <div class="is-active"></div>
+          <div class="item_content" id="proj15text">
+            <p class="item_title">Concept Collaboration Project</p>
+            <p class="item_description">Collaborate on a film concept project</p>
+            <button class="modal-btn" href="#myModal15">Click to explore more.</button>
+          </div>
+        </div>
+      </div>
     
     </div>
     <!--end of project grid-->
@@ -1741,6 +1753,37 @@
       </div>
     </div>
 
+    <!--ella collab-->
+    <div class="modal" id="myModal15">
+      <div class="modal-content">
+        <div class="modal-header">
+          <!--<span class="close">
+                  <i class="fa fa-window-close" aria-hidden="true"></i>
+                  </span>-->
+          <h2>Chili Concept Collaboration</h2>
+        </div>
+        <!--end of modal header-->
+        <div class="modal-body">
+          <figure class="mbc_container">
+            <img src="/assets/art/ella-collab/chili-board.jpg" alt="chili board" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Chili board</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Chili board</p>
+            </span>
+
+            <p>The initial concept focused on our protagonist's journey to the big city.</p>
+          </figure>
+
+        </div>
+        <!--end of modalbody-->
+        <div class="modal-footer">Modal footer</div>
+        <!--end of modal footer-->
+      </div>
+      <!--end of modal content-->
+    </div>
+    <!--end of modal containaer-->
 
     <!-- <div class="modal" id="myModal-e">
       <div class="modal-content">
