--- a/index.html
+++ b/index.html
@@ -504,6 +504,17 @@
               </p>
             </span>
           </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/theuden2-webtoon.jpg" alt="isran" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Theuden in the rain</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Theuden in the rain</p>
+            </span>
+          </figure>
+
     
           <figure class="mbc_container">
             <img src="https://pbs.twimg.com/media/FQGaDjGWUAseXdC?format=png&name=900x900" alt="owl house card"
@@ -528,6 +539,26 @@
             </figcaption>
             <span class="mbc_content-hover">
               <p>The Constellation Witch - Animal Crossing</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/isran-webtoon.jpg" alt="isran" class="modal-img"/>
+            <figcaption class="mbc_content">
+              <p>Isran but animal crossing</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>isran but animal crossing</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/fanart/theuden3-webtoon.jpg" alt="isran" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Theuden but animal crossing</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Theuden but animal crossing</p>
             </span>
           </figure>
     
