--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     <!--- PROJECT GRID --->
     <div class="tabcontent" id="project-grid">
 
+      <!--OOP class proj-->
+      <div class="pcontainer">
+        <div class="card" id="project16">
+          <div class="is-active"></div>
+          <div class="item_content" id="proj16text">
+            <p class="item_title">Drawing App in Java</p>
+            <p class="item_description">This is a simple drawing app made in Java</p>
+            <button class="proj_outsideLink"><a href="https://github.com/ViLinh27/se450-FinalProject">Click to explore more.</a></button>
+          </div>
+        </div> 
+      </div>
+
       <!-- time to talk Game-->
       <div class="pcontainer">
         <div class="card" id="project7">
