add some layout projects to the project grid

--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@
           </div>
         </div>
       </div>
+
+      <!--layouts-->
+      <div class="pcontainer">
+        <div class="card" id="project17">
+          <div class="is-active"></div>
+          <div class="item_content" id="proj17text">
+            <p class="item_title">Layouts and Backgrounds</p>
+            <p class="item_description">Environments drawn in different styles.</p>
+            <button class="modal-btn" href="#myModal17">Click to explore more.</button>
+          </div>
+        </div>
+      </div>
     
     </div>
     <!--end of project grid-->
@@ -1819,6 +1831,30 @@
             <p>The initial concept focused on our protagonist's journey to the big city.</p>
           </figure>
 
+          <figure class="mbc_container">
+            <img src="/assets/art/ella-collab/foottown.jpg" alt="food town" class="modal-img"/>
+            <figcaption class="mbc_content">
+              <p>food town</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>food town</p>
+            </span>
+
+            <p>The big city that holds the opportunities for our main character.</p>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/ella-collab/kitchen.jpg" alt="kitchen" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>kitchen concept</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>kitchen concept</p>
+            </span>
+
+            <p>The main character's first time in an industrial kitchen.</p>
+          </figure>
+
         </div>
         <!--end of modalbody-->
         <div class="modal-footer">Modal footer</div>
@@ -1827,6 +1863,65 @@
       <!--end of modal content-->
     </div>
     <!--end of modal containaer-->
+
+    <!--layouts-->
+    <div class="modal" id="myModal17">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Layouts Projects</h2>
+        </div>
+        <div class="modal-body">
+
+          <figure class="mbc_container">
+            <img src="/assets/art/layouts/layout1.jpg" alt="woods" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Woods</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Woods</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/layouts/layout2.jpg" alt="woods 2" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Woods 2</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Woods 2</p>
+            </span>
+          </figure>
+          
+          <figure class="mbc_container">
+            <img src="/assets/art/layouts/layout3.jpg" alt="cliffside" class="modal-img"/>
+            <figcaption class="mbc_content"><p>cliffside</p></figcaption>
+            <span class="mbc_content-hover"><p>cliffside</p></span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/layouts/layout4.jpg" alt="sunset" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>sunset</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>sunset</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/layouts/layout5.jpg" alt="night time" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>night time</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>night time</p>
+            </span>
+          </figure>
+
+        </div>
+        <div class="modal-footer">Layouts</div>
+      </div>
+    </div>
 
     <!-- <div class="modal" id="myModal-e">
       <div class="modal-content">
