add tabs for filtering purposes
test out function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <div class="topnav" id="mainTopNav">
           <!--tabs container-->
           <a><button class="tablinks" onclick="openTab(event,'project-grid')" id="defaultOpen">Home</button></a>
+          <a><button class="tablinks" onclick="" id="code-filter">Code</button></a>
+          <a><button class="tablinks" onclick="" id="ux-filter">UX</button></a>
+          <a><button class="tablinks" onclick="" id="art-filter">Art</button></a>
           <a><button class="tablinks" onclick="openTab(event,'about-grid')">About</button></a>
           <a><button class="tablinks" onclick="openTab(event,'cv-grid')">CV</button></a>
           <a><button id="darkModebtn" onclick="toggleDarkMode()">Dark Mode</button></a>
