--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="topnav" id="mainTopNav">
           <!--tabs container-->
           <ul id="portfolio-filters">
-              <li class="filter-active" data-filter=".filter-code, .filter-ux, .filter-art">
+              <li class="filter-active" data-filter=".filter-code, .filter-ux, .filter-art" >
                 <a><button class="tablinks" onclick="openTab(event,'project-grid')" id="defaultOpen">Home</button></a>
               </li>
               <li data-filter=".filter-code">
@@ -320,7 +320,7 @@
     <div class="tabcontent" id="cv-grid">
       <div class="cv-container">
         <div class="cv-header">
-          <p>vilinh27@gmail.com | portfolio.com | linkedinprofile</p>
+          <p>vilinh27@gmail.com | <a href="https://github.com/ViLinh27">https://github.com/ViLinh27</a> | <a href="https://www.linkedin.com/in/vilinhnguyen27/">https://www.linkedin.com/in/vilinhnguyen27/</a></p>
         </div>
         <div class="cv-education">
           <h3>Education</h3>
@@ -2043,7 +2043,9 @@
     <!--end of footer-->
     <!-- partial -->
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/19.1.3/lazyload.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <script src="/basicEffects.js"></script>
     <script src="/filter.js"></script>
   </body>
