project tab hilight kinda works.
will not unhilight when i go on separate tab though

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
           <!--tabs container-->
           <ul id="portfolio-filters">
               <li class="filter-active" data-filter=".filter-code, .filter-ux, .filter-art" >
-                <a><button class="tablinks" onclick="openTab(event,'project-grid')" id="defaultOpen">Home</button></a>
+                <button class="tablinks" onclick="openTab(event,'project-grid')" id="defaultOpen">Home</button>
               </li>
               <li data-filter=".filter-code">
-                <a><button class="tablinks" onclick="" id="code-filter" >Code</button></a>
+                <button class="tablinks" onclick="" id="code-filter" >Code</button>
               </li>
               <li data-filter=".filter-ux">
-                <a><button class="tablinks" onclick="" id="ux-filter">UX</button></a>
+                <button class="tablinks" onclick="" id="ux-filter">UX</button>
               </li>
               <li data-filter=".filter-art">
-                <a><button class="tablinks" onclick="" id="art-filter">Art</button></a>
+                <button class="tablinks" onclick="" id="art-filter">Art</button>
               </li>
           </ul>
-          <a><button class="tablinks" onclick="openTab(event,'about-grid')">About</button></a>
-          <a><button class="tablinks" onclick="openTab(event,'cv-grid')">CV</button></a>
-          <a><button id="darkModebtn" onclick="toggleDarkMode()">Dark Mode</button></a>
+          <button class="tablinks" onclick="openTab(event,'about-grid')">About</button>
+          <button class="tablinks" onclick="openTab(event,'cv-grid')">CV</button>
+          <button id="darkModebtn" onclick="toggleDarkMode()">Dark Mode</button>
     
           <a href="javascript:void(0);" class="icon" onClick="responsiveMenu()">
             <i class="fa fa-bars"></i>
