add repo link for react todo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="item_content" id="proj18text">
             <p class="item_title">To Do blog application in React</p>
             <p class="item_description">This is a simple blog code project made in React JS</p>
-            <button class=""><a href="">Click to explore more.</a></button>
+            <button class="proj_outsideLink"><a href="https://github.com/ViLinh27/lab2-todoapp">Click to explore more.</a></button>
           </div>
         </div>
       </div>
