the first child is in the icon menu in responsive 650px
now need to fix alignment in 650 px

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <!--end of topnav-->
       </div>
-      <!--end of top banner-->
+      <!-- top banner-->
       <img src="https://pbs.twimg.com/media/GKQQB2lW4AAwvFo?format=png&name=small" alt="dog" class="dog" />
       <div class="top-banner_name">
         Hello, Visitor!
