dark mode was getting rid of projects grid so had to adjust

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               <li>
                 <button class="tablinks" onclick="openTab(event,'cv-grid')">CV</button>
               </li>
-              <li>
-                <button id="darkModebtn" onclick="toggleDarkMode()">Dark Mode</button>
+              <li data-filter=".filter-code, .filter-ux, .filter-art">
+                <button class="designbtn" id="darkModebtn" onclick="toggleDarkMode()">Dark Mode</button>
               </li>
           </ul>
           
