try to get modal to scroll top (failed)

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
     <!--- MODALS --->
     
     <!--fan art-->
-    <div class="modal" id="myModal1">
+    <div class="modal" id="myModal1" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <!--<span class="close">
@@ -632,7 +632,7 @@
     <!--end of modal containaer-->
 
     <!--celeb portraits-->
-    <div class="modal" id="myModal2">
+    <div class="modal" id="myModal2" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <!--<span class="close">
@@ -689,7 +689,7 @@
     <!--end of modal containaer-->
 
     <!--my OCs-->
-    <div class="modal" id="myModal3">
+    <div class="modal" id="myModal3" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <!--<span class="close">
@@ -739,7 +739,7 @@
     <!--end of modal containaer-->
 
     <!--dtiys-->
-    <div class="modal" id="myModal4">
+    <div class="modal" id="myModal4" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <!--<span class="close">
@@ -827,7 +827,7 @@
     <!--end of modal containaer-->
     
     <!--sql projects-->
-    <div class="modal" id="myModal5">
+    <div class="modal" id="myModal5" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <!--<span class="close">
@@ -901,7 +901,7 @@
     <!--end of modal containaer-->
 
     <!--c# projects-->
-    <div class="modal" id="myModal6">
+    <div class="modal" id="myModal6" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <!--<span class="close">
@@ -1058,7 +1058,7 @@
     </div> -->
 
     <!--android project-->
-    <div class="modal" id="myModal10">
+    <div class="modal" id="myModal10" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <h2>Android Notes App</h2>
@@ -1091,7 +1091,7 @@
     </div>
 
     <!--ios book tracker-->
-    <div class="modal" id="myModal11">
+    <div class="modal" id="myModal11" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <h2>IOS Book tracker App</h2>
@@ -1142,7 +1142,7 @@
     </div>
 
     <!--IA Rouyn project-->
-    <div class="modal" id="myModal12">
+    <div class="modal" id="myModal12" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <h2>An Exploration of Rouyn Noranda's website</h2>
@@ -1301,7 +1301,7 @@
     </div>
 
     <!--tiny fingers discussion-->
-    <div class="modal" id="myModal13">
+    <div class="modal" id="myModal13" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <h2>UX Discussion</h2>
@@ -1450,7 +1450,7 @@
     </div>
 
     <!--peezyfind-->
-    <div class="modal" id="myModal14">
+    <div class="modal" id="myModal14" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <h2>PeezyFind</h2>
@@ -1845,7 +1845,7 @@
     </div>
 
     <!--ella collab-->
-    <div class="modal" id="myModal15">
+    <div class="modal" id="myModal15" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <!--<span class="close">
@@ -1901,7 +1901,7 @@
     <!--end of modal containaer-->
 
     <!--layouts-->
-    <div class="modal" id="myModal17">
+    <div class="modal" id="myModal17" onclick="scrollTop()">
       <div class="modal-content">
         <div class="modal-header">
           <h2>Layouts Projects</h2>
