add in millie game porject square
html only

--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
     <!--- PROJECT GRID --->
     <div class="tabcontent" id="project-grid">
 
+      <!-- Millie game-->
+      <div class="pcontainer filter-code">
+        <div class="card" id="project19">
+          <div class="is-active"></div>
+          <div class="item_content" id="project19text">
+            <p class="item_title">Millicent Lost Her Eye</p>
+            <p class="item_description"></p>
+            <button class="proj_outsideLink"><a href="https://linh-is-tibia.itch.io/millicent-lost-her-eye">
+              Click to explore
+                more.</a></button>
+          </div>
+        </div>
+      </div>
       <!--todo react app-->
       <div class="pcontainer filter-code">
         <div class="card" id="project18">
