move todo react appl

--- a/index.html
+++ b/index.html
@@ -101,17 +101,6 @@
           </div>
         </div>
       </div>
-      <!--todo react app-->
-      <div class="pcontainer filter-code">
-        <div class="card" id="project18">
-          <div class="is-active"></div>
-          <div class="item_content" id="proj18text">
-            <p class="item_title">To Do blog application in React</p>
-            <p class="item_description">This is a simple blog code project made in React JS</p>
-            <button class="proj_outsideLink"><a href="https://github.com/ViLinh27/lab2-todoapp">Click to explore more.</a></button>
-          </div>
-        </div>
-      </div>
       
       <!--OOP class proj-->
       <div class="pcontainer filter-code">
@@ -164,6 +153,19 @@
       </div>
       <!--end of project 9-->
 
+      <!--todo react app-->
+      <div class="pcontainer filter-code">
+        <div class="card" id="project18">
+          <div class="is-active"></div>
+          <div class="item_content" id="proj18text">
+            <p class="item_title">To Do blog application in React</p>
+            <p class="item_description">This is a simple blog code project made in React JS</p>
+            <button class="proj_outsideLink"><a href="https://github.com/ViLinh27/lab2-todoapp">Click to explore
+                more.</a></button>
+          </div>
+        </div>
+      </div>
+      
       <!--sql projects-->
       <div class="pcontainer filter-code">
         <div class="card" id="project5">
