move OOP drawing app

--- a/index.html
+++ b/index.html
@@ -101,18 +101,6 @@
           </div>
         </div>
       </div>
-      
-      <!--OOP class proj-->
-      <div class="pcontainer filter-code">
-        <div class="card" id="project16">
-          <div class="is-active"></div>
-          <div class="item_content" id="proj16text">
-            <p class="item_title">Drawing App in Java</p>
-            <p class="item_description">This is a simple drawing app made in Java code</p>
-            <button class="proj_outsideLink"><a href="https://github.com/ViLinh27/se450-FinalProject">Click to explore more.</a></button>
-          </div>
-        </div> 
-      </div>
 
       <!-- time to talk Game-->
       <div class="pcontainer filter-code">
@@ -153,6 +141,19 @@
       </div>
       <!--end of project 9-->
 
+      <!--OOP class proj-->
+      <div class="pcontainer filter-code">
+        <div class="card" id="project16">
+          <div class="is-active"></div>
+          <div class="item_content" id="proj16text">
+            <p class="item_title">Drawing App in Java</p>
+            <p class="item_description">This is a simple drawing app made in Java code</p>
+            <button class="proj_outsideLink"><a href="https://github.com/ViLinh27/se450-FinalProject">Click to explore
+                more.</a></button>
+          </div>
+        </div>
+      </div>
+
       <!--todo react app-->
       <div class="pcontainer filter-code">
         <div class="card" id="project18">
@@ -165,7 +166,7 @@
           </div>
         </div>
       </div>
-      
+
       <!--sql projects-->
       <div class="pcontainer filter-code">
         <div class="card" id="project5">
