new project card to show nola project
need to make modal for nola project

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
     <!--- PROJECT GRID --->
     <div class="tabcontent" id="project-grid">
 
+      <!--NOLA photo study-->
+      <div class="pcontainer filter-art">
+        <div class="card" id="project20">
+          <div class="is-active"></div>
+          <div class="item_content" id="proj20text">
+            <p class="item_title">NOLA photo study</p>
+            <p class="item_description">Practice in lighting and layout thanks to a vacation photo</p>
+            <p class="modal-btn" href="#">Click to explore more.</p>
+          </div>
+        </div>
+      </div>
+
       <!--layouts-->
       <div class="pcontainer filter-art">
         <div class="card" id="project17">
