Which modal is nola leading to
make modal block for nola.still needs content

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="item_content" id="proj20text">
             <p class="item_title">NOLA photo study</p>
             <p class="item_description">Practice in lighting and layout thanks to a vacation photo</p>
-            <p class="modal-btn" href="#">Click to explore more.</p>
+            <p class="modal-btn" href="#myModal18">Click to explore more.</p>
           </div>
         </div>
       </div>
@@ -1987,6 +1987,11 @@
         </div>
         <div class="modal-footer">Layouts</div>
       </div>
+    </div>
+
+    <!--NOLA layout porject-->
+    <div class="modal" id="myModal18">
+
     </div>
 
     <!-- <div class="modal" id="myModal-e">
