add to nola modal. up to shading 01 so far
still need a few process shots

--- a/index.html
+++ b/index.html
@@ -1991,7 +1991,69 @@
 
     <!--NOLA layout porject-->
     <div class="modal" id="myModal18">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>NOLA photo study</h2>
+        </div>
 
+        <div class="modal-body">
+
+          <figure class="mbc_container">
+            <img src="/assets/art/NOLA/NOLA-ghostsBG.png" alt="nola-bg" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>NOLA BG</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>NOLA BG</p>
+            </span>
+          </figure>
+          </div>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/NOLA/NOLA_001_referencePic.png" alt="Reference Pic" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Reference Pic</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Reference Pic</p>
+            </span>
+          </figure>
+        </div>
+
+        <figure class="mbc_container">
+          <img src="/assets/art/NOLA/NOLA_002_Linework.png" alt="Linework" class="modal-img" />
+          <figcaption class="mbc_content">
+            <p>Linework</p>
+          </figcaption>
+          <span class="mbc_content-hover">
+            <p>Linework</p>
+          </span>
+        </figure>
+        </div>
+
+        <figure class="mbc_container">
+          <img src="/assets/art/NOLA/NOLA_003_colour.png" alt="Colour" class="modal-img" />
+          <figcaption class="mbc_content">
+            <p>Colour</p>
+          </figcaption>
+          <span class="mbc_content-hover">
+            <p>Colour</p>
+          </span>
+        </figure>
+        </div>
+
+        <figure class="mbc_container">
+          <img src="/assets/art/NOLA/NOLA_004_shading01.png" alt="Shading" class="modal-img" />
+          <figcaption class="mbc_content">
+            <p>Shading</p>
+          </figcaption>
+          <span class="mbc_content-hover">
+            <p>Shading</p>
+          </span>
+        </figure>
+        </div>
+
+      </div>
     </div>
 
     <!-- <div class="modal" id="myModal-e">
