--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,6 @@
               <p>NOLA BG</p>
             </span>
           </figure>
-          </div>
 
           <figure class="mbc_container">
             <img src="/assets/art/NOLA/NOLA_001_referencePic.png" alt="Reference Pic" class="modal-img" />
@@ -2018,41 +2017,41 @@
               <p>Reference Pic</p>
             </span>
           </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/NOLA/NOLA_002_Linework.png" alt="Linework" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Linework</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Linework</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/NOLA/NOLA_003_colour.png" alt="Colour" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Colour</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Colour</p>
+            </span>
+          </figure>
+
+          <figure class="mbc_container">
+            <img src="/assets/art/NOLA/NOLA_004_shading01.png" alt="Shading" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Shading</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Shading</p>
+            </span>
+          </figure>
+
         </div>
 
-        <figure class="mbc_container">
-          <img src="/assets/art/NOLA/NOLA_002_Linework.png" alt="Linework" class="modal-img" />
-          <figcaption class="mbc_content">
-            <p>Linework</p>
-          </figcaption>
-          <span class="mbc_content-hover">
-            <p>Linework</p>
-          </span>
-        </figure>
-        </div>
-
-        <figure class="mbc_container">
-          <img src="/assets/art/NOLA/NOLA_003_colour.png" alt="Colour" class="modal-img" />
-          <figcaption class="mbc_content">
-            <p>Colour</p>
-          </figcaption>
-          <span class="mbc_content-hover">
-            <p>Colour</p>
-          </span>
-        </figure>
-        </div>
-
-        <figure class="mbc_container">
-          <img src="/assets/art/NOLA/NOLA_004_shading01.png" alt="Shading" class="modal-img" />
-          <figcaption class="mbc_content">
-            <p>Shading</p>
-          </figcaption>
-          <span class="mbc_content-hover">
-            <p>Shading</p>
-          </span>
-        </figure>
-        </div>
-
+        <div class="modal-footer">NOLA photo study</div>
+        
       </div>
     </div>
 
