modal for nola works now but the grey area is kinda weird
does't take up entier width

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="item_content" id="proj20text">
             <p class="item_title">NOLA photo study</p>
             <p class="item_description">Practice in lighting and layout thanks to a vacation photo</p>
-            <p class="modal-btn" href="#myModal18">Click to explore more.</p>
+            <button class="modal-btn" href="#myModal18">Click to explore more.</button>
           </div>
         </div>
       </div>
@@ -2048,10 +2048,20 @@
             </span>
           </figure>
 
+          <figure class="mbc_container">
+            <img src="/assets/art/NOLA/NOLA_004_shading02.png" alt="Shading2" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Shading 2</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Shading 2</p>
+            </span>
+          </figure>
+
         </div>
 
         <div class="modal-footer">NOLA photo study</div>
-        
+
       </div>
     </div>
 
