Last nola process picture

--- a/index.html
+++ b/index.html
@@ -2058,6 +2058,16 @@
             </span>
           </figure>
 
+          <figure class="mbc_container">
+            <img src="/assets/art/NOLA/NOLA_005_shadingWLinework.png" alt="shading with linework" class="modal-img" />
+            <figcaption class="mbc_content">
+              <p>Shading with Linework</p>
+            </figcaption>
+            <span class="mbc_content-hover">
+              <p>Shading with Linework</p>
+            </span>
+          </figure>
+
         </div>
 
         <div class="modal-footer">NOLA photo study</div>
